# simple-discord

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.override.yaml  docker-compose.yaml  environment.yaml  pyproject.toml  requirements.txt
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/specs/: extract_openapi.py
backend/src/harmony/app/: main.py
backend/src/harmony/app/core/: __init__.py  settings.py
backend/src/harmony/app/db/: __init__.py  unit_of_work.py  utils.py  writers.py
backend/src/harmony/app/repositories/: __init__.py  base_repo.py  chat_data.py  chat_history.py  email_repo.py  user_chat.py  user_data.py
backend/src/harmony/app/schemas/: __init__.py  api.py  auth.py  chat.py  user.py
backend/src/harmony/app/services/: __init__.py  auth.py  chat.py  user.py
backend/src/harmony/tests/: conftest.py
backend/src/harmony/tests/integration/: chat_api_test.py  complex_simulation_test.py  soak_test.py  user_api_test.py
backend/src/harmony/tests/stress/: stress_test.py
backend/src/harmony/tests/utils/: __init__.py  actions.py  client.py  data_gen.py  metrics.py  state.py
backend/src/simple_discord/app/core/: context.py
backend/src/simple_discord/app/db/: unit_of_work.py  writers.py
backend/src/simple_discord/app/repositories/: base_repo.py  chat_data.py  chat_history.py  user_chat.py  user_data.py
backend/src/simple_discord/app/services/: chat.py
backend/src/simple_discord/tests/integration/: chat_api_test.py  simple_simulation_test.py  soak_test.py  user_api_test.py
config/: tables.json
(+107 files in other folders)
